# siliconcompiler

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  requirements.txt  setup.py  test.lef
.github/workflows/: docker.yml  on_push_tests.yml  wheels.yml
examples/gcd/: floorplan.py  gcd.v  run.sh
examples/heartbeat_caravel_wrapper/: build.py  heartbeat.bb.v  heartbeat.v  user_project_wrapper.v  user_project_wrapper_nogrid.def
examples/microwatt/: build.py  cache_ram.vhdl
examples/x7408/: floorplan.py  x7408.py  x7408.sdc  x7408.v
setup/: install-klayout.sh  install-magic.sh  install-morty.sh  install-netgen.sh  install-openroad.sh  install-python.sh  install-surelog.sh  install-sv2v.sh
setup/docker/: Dockerfile  container_init.py
siliconcompiler/: client.py  core.py  floorplan.py  scheduler.py  schema.py  server.py
siliconcompiler/flows/: asicflow.py  physasicflow.py  svasicflow.py
siliconcompiler/foundries/: skywater130.py
siliconcompiler/leflib/: _leflib.pxd  _leflib.pyx
siliconcompiler/libs/: sky130bhd.py  sky130bhs.py  sky130hs.py
siliconcompiler/odb/: __init__.py
siliconcompiler/pdks/: skywater130.py  skywater130b.py  skywater130bhs.py  skywater130hs.py
siliconcompiler/targets/: skywater130b_demo.py  skywater130bhs_demo.py  skywater130hs_demo.py
siliconcompiler/templates/: floorplan_def.j2
tests/: README.md  fixtures.py
tests/core/: test_env_schema.py  test_minmax.py  test_summary.py
tests/designs/: common.py
tests/examples/: test_heartbeat.py  test_oh_experiments.py
tests/flows/: test_flowstatus.py  test_steplist.py  (+1 more)
(+35 files in other folders)
